# dEclat

./: CMakeLists.txt  main.cpp  taxonomy_tree.cxx  taxonomy_tree.hpp  tree.cxx  tree.hpp
